css/footer.css
@import  "//fonts.googleapis.com/css?family=Open+Sans+Condensed:100,300,700|Open+Sans:400italic,400,700,600";

@font-face {
	font-family: "footer-icons";
	src: url(//hydra-media.cursecdn.com/hydra/fonts/footer-icons.ttf);
	src: url(//hydra-media.cursecdn.com/hydra/fonts/footer-icons.eot#iefix) format("embedded-opentype"),url(//hydra-media.cursecdn.com/hydra/fonts/footer-icons.woff) format("woff"),url(//hydra-media.cursecdn.com/hydra/fonts/footer-icons.ttf) format("truetype"),url(//hydra-media.cursecdn.com/hydra/fonts/footer-icons.svg) format("svg");
	font-weight: 400;
	font-style: normal;
}

html body #global-wrapper {
	clear: both;
	min-height: 100%;
	height: auto !important;
	margin-bottom: -156px;
}

html body #global-wrapper #footer-push {
	height: 156px;
}

html body.hide-ads #global-wrapper {
	clear: both;
	min-height: 100%;
	height: auto !important;
	margin-bottom: -155px;
}

html body.hide-ads #global-wrapper #footer-push {
	height: 155px;
}

footer#footer {
	clear: both;
	height: 292px;
	background-color: #1b1b1c;
	font-family: 'Open Sans',sans-serif;
	font-weight: 300;
	position: relative;
}


.skin-minerva div#footer {
	padding: 2em 0 0;
}

.skin-minerva footer#footer {
	margin-top: 0;
	padding: 0;
}

.skin-minerva #footer-hydra-hydrafooter {
	display: block;
	margin: 0 auto;
	padding: 0;
}

.skin-minerva footer#footer div.footer-links {
	height: auto;
	width: 100%;
}

footer#footer * {
	box-sizing: border-box;
}

footer#footer ul {
	list-style: none;
	list-style-image: none;
	margin: 0;
	padding: 0;
}

footer#footer.hide-ads {
	height: 155px;
}

footer#footer.hide-ads div.footer-links {
	padding: 20px 0;
	text-align: center;
}

footer#footer.hide-ads div.footer-links div.top a.curse {
	width: 214px;
	height: 52px;
	background: url(../images/footer/premium-logo-light.jpg);
	background-image: linear-gradient(transparent,transparent),url(../images/footer/premium-logo-light.svg);
	background-repeat: no-repeat;
	display: inline-block;
	margin-right: 20px;
}

footer#footer.hide-ads div.footer-links div.top ul.social {
	display: inline-block;
	overflow: hidden;
	position: relative;
	top: -16px;
}

footer#footer.hide-ads div.footer-links div.top ul.social::before {
	display: none;
}

footer#footer.hide-ads div.footer-links div.top ul.social li {
	float: left;
	padding: 0 15px;
	border-right: 2px solid #3a3a3a;
}

footer#footer.hide-ads div.footer-links div.top ul.social li:last-child {
	border-right: none;
}

footer#footer.hide-ads div.footer-links div.top ul.social li a {
	display: block;
	text-indent: -500px;
	white-space: nowrap;
	overflow: hidden;
	width: 16px;
	height: 16px;
	position: relative;
	line-height: 1;
}

footer#footer.hide-ads div.footer-links div.top ul.social li a::after {
	position: absolute;
	display: block;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	font-family: 'footer-icons';
	font-size: 16px;
	color: #838383;
	text-indent: 0;
}

footer#footer.hide-ads div.footer-links div.top ul.social li a.fb::after {
	content: '\e603';
}

footer#footer.hide-ads div.footer-links div.top ul.social li a.tw::after {
	content: '\ea91';
}

footer#footer.hide-ads div.footer-links div.top ul.social li a.yt::after {
	content: '\ea97';
}

footer#footer.hide-ads div.footer-links div.top ul.social li a.nl::after {
	content: '\e601';
}

footer#footer.hide-ads div.footer-links ul.links {
	margin-right: 0;
	-webkit-transform: translateY(0);
	-moz-transform: translateY(0);
	-ms-transform: translateY(0);
	-o-transform: translateY(0);
	transform: translateY(0);
	top: 9px;
	display: inline-block;
	float: none;
}

footer#footer.hide-ads div.footer-links ul.links li {
	float: left;
	margin-right: 20px;
}

footer#footer.hide-ads div.footer-links ul.links li:last-child {
	margin-right: 0;
}

footer#footer.hide-ads div.footer-links ul.links li a {
	padding-left: 0;
}

footer#footer.hide-ads div.footer-links ul.links li a::before {
	display: none;
}

footer#footer.hide-ads div.footer-links span.copyright {
	margin-left: 0;
	bottom: 20px;
}

footer#footer div.ad-placement {
	width: 302px;
	height: 252px;
	position: absolute;
	top: 20px;
	right: 0;
	margin-left: 349px;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	-o-transform: translateX(-50%);
	transform: translateX(-50%);
	left: 50%;
	border: 1px solid #585858;
}

footer#footer a,footer#footer a:visited,footer#footer a:active,footer#footer a:hover {
	text-decoration: none;
	color: #c9c9c9;
	font-size: 14px;
}

footer#footer div.footer-links {
	width: 1000px;
	height: 100%;
	margin: 0 auto;
	padding: 20px 0;
}

footer#footer div.footer-links > a,footer#footer div.footer-links > ul {
	position: relative;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
	top: 50%;
	float: left;
}

footer#footer div.footer-links a.curse {
	display: block;
	width: 216px;
	height: 148px;
	background: url(../images/footer/logo-light.jpg);
	background-image: linear-gradient(transparent,transparent),url(../images/footer/logo-light.svg);
	text-indent: -500px;
	white-space: nowrap;
	overflow: hidden;
	margin-right: 38px;
	margin-left: -10px;
}

footer#footer div.footer-links > ul {
	margin-right: 50px;
}

footer#footer div.footer-links > ul li {
	border: 0 none;
	content: none;
	font-size: inherit;
	line-height: 30px;
	padding: 0;
}

footer#footer div.footer-links > ul li a {
	padding-left: 25px;
	position: relative;
}

footer#footer div.footer-links > ul li a::before {
	position: absolute;
	top: 0;
	left: 0;
	width: 16px;
	height: 16px;
	font-family: 'footer-icons';
	font-size: 16px;
	color: #c9c9c9;
	line-height: 20px;
}

footer#footer div.footer-links > ul li a.fb::before {
	content: '\e603';
}

footer#footer div.footer-links > ul li a.tw::before {
	content: '\ea91';
}

footer#footer div.footer-links > ul li a.yt::before {
	content: '\ea97';
}

footer#footer div.footer-links > ul li a.nl::before {
	content: '\e601';
}

footer#footer div.footer-links > ul li a.sign-in::before,footer#footer div.footer-links > ul li a.account::before {
	content: '\e604';
}

footer#footer div.footer-links > ul li a.register::before {
	content: '\e605';
}

footer#footer div.footer-links > ul li a.careers::before {
	content: '\e602';
}

footer#footer div.footer-links > ul li a.help::before {
	content: '\e609';
}

footer#footer div.footer-links > ul li a.about::before {
	content: '\e607';
}

footer#footer div.footer-links > ul li a.advertise::before {
	content: '\e608';
}

footer#footer div.footer-links > ul li a.tos::before {
	content: '\e926';
}

footer#footer div.footer-links > ul li a.privacy-policy::before {
	content: '\e600';
}

footer#footer div.footer-links > ul li a.premium::before {
	content: '\e606';
}

.hlist-separated footer#footer li::after {
	color: inherit;
	content: '';
	font-size: inherit;
	line-height: inherit;
	padding-left: inherit;
}

footer#footer div.footer-links span.copyright {
	font-size: 12px;
	display: block;
	text-align: center;
	position: absolute;
	bottom: 20px;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	-o-transform: translateX(-50%);
	transform: translateX(-50%);
	left: 50%;
	margin-left: -78px;
	color: #898989;
}

@media screen and (max-width: 1020px) {
	footer#footer.hide-ads {
		width: 100%;
		height: auto;
	}

	footer#footer.hide-ads div.footer-links {
		width: 100%;
		overflow: hidden;
	}

	footer#footer.hide-ads div.footer-links div.top a.curse {
		display: block;
		margin-right: 0;
		margin: 0 auto;
	}

	footer#footer.hide-ads div.footer-links div.top ul.social {
		top: 0;
		margin: 20px 0 10px;
	}

	footer#footer.hide-ads div.footer-links ul.links {
		top: 0;
		-webkit-transform: translateX(-50%);
		-moz-transform: translateX(-50%);
		-ms-transform: translateX(-50%);
		-o-transform: translateX(-50%);
		transform: translateX(-50%);
		left: 50%;
		float: left;
		text-align: center;
		display: block;
		margin-bottom: 10px;
	}

	footer#footer.hide-ads div.footer-links ul.links li {
		display: inline-block;
		float: none;
	}

	footer#footer.hide-ads div.footer-links span.copyright {
		width: 100%;
		position: inherit;
		float: left;
		clear: both;
		-webkit-transform: translateX(0);
		-moz-transform: translateX(0);
		-ms-transform: translateX(0);
		-o-transform: translateX(0);
		transform: translateX(0);
	}

	footer#footer.show-ads {
		width: 100%;
		padding-top: 18.25rem;
		padding-bottom: 1.25rem;
		height: auto;
	}

	footer#footer.show-ads div.ad-placement {
		top: 20px;
		-webkit-transform: translateX(-50%);
		-moz-transform: translateX(-50%);
		-ms-transform: translateX(-50%);
		-o-transform: translateX(-50%);
		transform: translateX(-50%);
		left: 50%;
		margin-left: 0;
	}

	footer#footer.show-ads div.footer-links {
		padding: 0;
		width: 100%;
		overflow: hidden;
	}

	footer#footer.show-ads div.footer-links a.curse {
		-webkit-transform: translate(-50%,0);
		-moz-transform: translate(-50%,0);
		-ms-transform: translate(-50%,0);
		-o-transform: translate(-50%,0);
		transform: translate(-50%,0);
		left: 50%;
		top: 0;
		margin-right: 0;
	}

	footer#footer.show-ads div.footer-links ul {
		overflow: hidden;
		margin-right: 0;
		-webkit-transform: translate(-50%,0);
		-moz-transform: translate(-50%,0);
		-ms-transform: translate(-50%,0);
		-o-transform: translate(-50%,0);
		transform: translate(-50%,0);
		top: 4px;
		left: 50%;
		margin-right: 0;
		display: inline-block;
		clear: both;
		text-align: center;
	}

	footer#footer.show-ads div.footer-links ul:last-of-type {
		margin-right: 0;
	}

	footer#footer.show-ads div.footer-links ul li {
		float: none;
		margin-right: 1.5625rem;
		display: inline;
	}

	footer#footer.show-ads div.footer-links ul li:last-child {
		margin-right: 0;
	}

	footer#footer.show-ads div.footer-links ul li a {
		padding-left: 0;
	}

	footer#footer.show-ads div.footer-links ul li a::before {
		display: none;
	}

	footer#footer.show-ads div.footer-links span.copyright {
		width: 100%;
		position: inherit;
		float: left;
		clear: both;
		-webkit-transform: translateX(0);
		-moz-transform: translateX(0);
		-ms-transform: translateX(0);
		-o-transform: translateX(0);
		transform: translateX(0);
		margin-left: 0;
		margin-top: 15px;
	}
}

